--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -30,6 +30,11 @@
                 </div>
             </div>   
         </nav>
+        <div class="container">
+        {% block content %}
+        {% endblock %}
+            
+        </div>    
 
         <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
